# kromcanon

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  pyproject.toml
docs/: DEVLOG.md  REFERENCE.md
scripts/: compare.py  experiment.py  extract.py  run_queue.py  sft.py  train.py
src/kromcanon/: __init__.py  canon.py  config.py  data.py  kromhc.py  meta.py  model.py  safety_data.py  sft.py  tokenizer.py  train.py  tree.py
src/kromcanon/interp/: __init__.py  abliterate.py  compare.py  extract.py  io.py  steer.py  viz.py
tests/: test_canon.py  test_e2e.py  test_interp.py  test_kromhc.py  test_meta.py  test_model.py  test_safety.py  test_train.py  test_tree.py  test_viz.py
